Added first CSV, minor changes

--- a/felipe_main_notebook.ipynb
+++ b/felipe_main_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e8282053",
+   "id": "683aff2e",
    "metadata": {},
    "source": [
     "<h1> Attempting to Use the US Census Bureau API to Streamline the CSV Collection Process</h1>"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07d1b57f",
+   "id": "bfcc5dd1",
    "metadata": {},
    "source": [
     "<h2><b>IMPORTANT:</b><br><span style=\"color:red;\">This product uses the Census Bureau Data API but is not endorsed or certified by the Census Bureau.</span></h2>"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42c3c384",
+   "id": "6db304e5",
    "metadata": {},
    "source": [
     "<h2>Testing the API With a Set URL</h2>"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 518,
-   "id": "098836dd",
+   "id": "d5664d63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 519,
-   "id": "1a47d965",
+   "id": "2052cdb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 520,
-   "id": "29e76b71",
+   "id": "d3f69733",
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "178909a2",
+   "id": "cd921321",
    "metadata": {},
    "source": [
     "I was able to get the correct values for the first row, but am struggling to find a way to get all the values for the all of the variables in the table."
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8573ebb",
+   "id": "4f24e2e3",
    "metadata": {},
    "source": [
     "<h2> Trying to use All Available Variables Instead of Just DP02_0001E and DP02_0001M </h2>"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 411,
-   "id": "f4d30fa1",
+   "id": "138c4da1",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8946725f",
+   "id": "34b138cc",
    "metadata": {},
    "source": [
     "Created a DF from the table acs5 using the API that contains all the variable names, their corresponding labels, and other information."
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 307,
-   "id": "66c10116",
+   "id": "cc119afb",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3775864f",
+   "id": "b0c57ae7",
    "metadata": {},
    "source": [
     "Used the DF to then create a Series of just the variable labels, also filtered out all Annotation variables."
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 313,
-   "id": "3993522c",
+   "id": "5d99dc7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a96af98a",
+   "id": "b5696b3b",
    "metadata": {},
    "source": [
     "Created a comma separated string of all variables in order to pass it into the query."
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 354,
-   "id": "a1f8ec04",
+   "id": "8541a0d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 355,
-   "id": "57d1a55f",
+   "id": "9da8908d",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e63c77b",
+   "id": "4cba877e",
    "metadata": {},
    "source": [
     "Getting <Response [400]> meaning that there is an error (we want <Response [200]>), I believe its a problem with how many variables I am passing in because when I use a subset of the variables I dont run into the same error. \n",
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 392,
-   "id": "039f7edf",
+   "id": "17d427ce",
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 393,
-   "id": "e7c7f888",
+   "id": "e3f18e08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 394,
-   "id": "e290db8a",
+   "id": "e81f155b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 459,
-   "id": "8ed1cc5f",
+   "id": "d3a89d4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 460,
-   "id": "8e5fec40",
+   "id": "34fb45f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 464,
-   "id": "2277734e",
+   "id": "31cc7c71",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fa78c99",
+   "id": "38556585",
    "metadata": {},
    "source": [
     "Realized I was being stupid and could use group(DP02) ..."
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6349fd1",
+   "id": "117d7e91",
    "metadata": {},
    "source": [
     "<h1> Properly Collecting Entire CSVs Using Census Bureau API Grouping </h1>"
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 629,
-   "id": "f92b3315",
+   "id": "846b0716",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +665,7 @@
   {
    "cell_type": "code",
    "execution_count": 633,
-   "id": "e338c254",
+   "id": "9fe071ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 647,
-   "id": "dfb0dcf1",
+   "id": "f211d1b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d003dcb",
+   "id": "4b01ec20",
    "metadata": {},
    "source": [
     "COMMENT : Converted the Loop for social characteristic download to Raw so that it wont run as already downloaded"
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "16db4bcf",
+   "id": "37ce10d3",
    "metadata": {},
    "source": [
     "base_url = \"https://api.census.gov/data/2021/acs/acs5/profile?get=\"\n",
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 648,
-   "id": "f927922a",
+   "id": "597440d7",
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f6a7184",
+   "id": "f3ed258e",
    "metadata": {},
    "source": [
     "<h2> Adding helper function and loop to download Demographic Characteristics </h2>"
@@ -924,7 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 649,
-   "id": "1f3e1e68",
+   "id": "6b8165b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,11 +951,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbbf5235",
+   "id": "4172e260",
    "metadata": {},
    "outputs": [],
    "source": [
+    "base_url = \"https://api.census.gov/data/2021/acs/acs5/profile?get=\"\n",
+    "api_key = \"&key=672276f2a0ad053d60f8bb0848cad8a290a29427\"\n",
     "group = \"group(DP05)\"\n",
+    "zcta_url = \"&for=zip%20code%20tabulation%20area:0\"\n",
+    "\n",
+    "ZCTA_Range = range(1001,2792) # all ZCTA values for MA.\n",
     "\n",
     "for zcta in ZCTA_Range:\n",
     "    url = f\"{base_url}{group}{zcta_url}{zcta}{api_key}\"\n",
@@ -969,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 650,
-   "id": "1d3b385f",
+   "id": "f3016528",
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6018b0e7",
+   "id": "a932625b",
    "metadata": {},
    "outputs": [],
    "source": []
