Spent an hour doing nothing

--- a/ani_main_notebook.ipynb
+++ b/ani_main_notebook.ipynb
@@ -1265,6 +1265,14 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "f8dc45a8-9d46-4da2-b16e-0b9451de4f95",
+   "metadata": {},
+   "source": [
+    "MA_zctas.to_csv(\"noah_csv/ma_zip_to_zcta.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d34850be",
    "metadata": {},
