Imported OneHotEncoder and verified saving of the uncleaned design matrix

--- a/data_cleaner.ipynb
+++ b/data_cleaner.ipynb
@@ -2357,7 +2357,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "pd.read_csv(\"/"
+   ]
   },
   {
    "cell_type": "code",
