Fixed linear dependence issues

--- a/trainer_notebooks/diabetes_trainer.ipynb
+++ b/trainer_notebooks/diabetes_trainer.ipynb
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 275,
    "id": "f3e3ddb5-997c-4cd3-88ba-5106141455ad",
    "metadata": {},
    "outputs": [
@@ -536,23 +536,11 @@
     {
      "data": {
       "text/plain": [
-       "array([ 6.83249429e-03,  2.76159240e-02,  1.53256200e-02,  1.34631690e-02,\n",
-       "        1.47866771e-02, -4.91602931e-03,  6.42222738e-03, -8.32172300e-03,\n",
-       "        1.93958697e-02,  8.06230389e+10,  2.13589745e-02,  8.29714429e-03,\n",
-       "        3.84161842e-03,  1.15433200e-02,  6.59990410e-03,  1.08911613e-02,\n",
-       "        1.66718646e-02,  1.45419997e-02,  2.15154056e-02,  1.05194906e-03,\n",
-       "        1.35567176e-02,  7.55363190e-03,  7.52895222e-03,  3.00744872e-03,\n",
-       "        1.28800368e-02,  2.99793161e-02,  6.79238061e-03,  1.92267301e-02,\n",
-       "        1.13838903e-02,  8.54054790e-03, -1.18708915e-03,  1.03477052e-02,\n",
-       "        2.59756473e-02,  9.46255193e-03,  1.10300893e-02,  1.86710308e-02,\n",
-       "        2.12654610e-02,  9.63106396e-03,  1.40081514e-03, -2.45712850e-03,\n",
-       "        2.94978620e-02,  1.12336846e-02,  2.31434464e-02,  2.12599206e-02,\n",
-       "        8.03416730e-04,  1.57872743e-02, -8.57623115e-03,  4.63630202e-03,\n",
-       "       -4.64895773e-03,  3.16295266e-02, -4.81891693e-02,  4.59820892e-03,\n",
-       "        7.47590010e-03, -6.39476087e-03,  8.42541820e-03,  2.26325408e-03])"
+       "array([0.09449918, 0.07658899, 0.07279046, ..., 0.15981311, 0.16315189,\n",
+       "       0.15495034])"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +616,7 @@
     "o, e, r, t = train_model(X_processed, Y_processed)\n",
     "model = LinearRegression()\n",
     "model.fit(X_processed, Y_processed)\n",
-    "model.coef_"
+    "model.predict(e)"
    ]
   },
   {
