Fixed independence issue

--- a/trainer_notebooks/diabetes_trainer.ipynb
+++ b/trainer_notebooks/diabetes_trainer.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 332,
    "id": "449b7e0f-96b0-4b60-b520-4eaeb48cd1c8",
    "metadata": {},
    "outputs": [],
@@ -307,12 +307,11 @@
     "    \"\"\"\n",
     "    \n",
     "    model = LinearRegression()\n",
-    "    cross_validation = KFold(n_splits=4)\n",
+    "    cross_validation = KFold(n_splits=4, shuffle=True, random_state=43)\n",
     "    Y_t = Y_transformation.transformation(Y)\n",
     "    model.fit(X, Y_t)\n",
     "    train_predictions = Y_transformation.inverse(model.predict(X))\n",
     "    train_error = rmse(Y, train_predictions)\n",
-    "    print(f\"Training Error: {train_error}\")\n",
     "    fold_counter = 1\n",
     "    avg_cv_error = 0\n",
     "    for train, val in cross_validation.split(X, Y_t):\n",
@@ -517,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 333,
    "id": "f3e3ddb5-997c-4cd3-88ba-5106141455ad",
    "metadata": {},
    "outputs": [
@@ -525,67 +524,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Error: 0.01925178608195658\n",
-      "Fold 1 validation error: 0.01961415844249388\n",
-      "Fold 2 validation error: 0.029297704807912144\n",
-      "Fold 3 validation error: 0.02098017994740329\n",
-      "Fold 4 validation error: 10839515985.84406\n",
-      "Average Cross Validation Error: 2709878996.4784884\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "0.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "1.0\n",
-      "0.997002999\n",
-      "-0.07688104433595762\n",
-      "-0.2231435513142097\n",
-      "0.977\n",
-      "-0.33547273628812946\n"
+      "Fold 1 validation error: 0.01949450018125605\n",
+      "Fold 2 validation error: 0.01932349620409779\n",
+      "Fold 3 validation error: 0.01914882102760733\n",
+      "Fold 4 validation error: 0.019249689174081742\n",
+      "Average Cross Validation Error: 0.019304126646760726\n"
      ]
     }
    ],
@@ -658,9 +601,7 @@
     "X_process = X_train.join(Y_train)\n",
     "model = LinearRegression()\n",
     "X_processed, Y_processed = process_design_matrix(X_process, [\"initial\", \"social\"])\n",
-    "train_model(X_processed, Y_processed)\n",
-    "for col in X_processed.columns:\n",
-    "    print(max(X_processed[col]))"
+    "train_model(X_processed, Y_processed)"
    ]
   },
   {
